@@ -29,7 +29,7 @@ foreach my $sep (undef, ':', ';', '|')
 
     $config->append_path( FOO_PATH2 => qw( foo bar baz ) );
 
-    foreach my $shell (qw( tcsh csh bsd-csh bash sh zsh cmd.exe command.com ksh 44bsd-csh jsh powershell.exe fish ))
+    foreach my $shell (qw( tcsh csh bsd-csh bash sh zsh cmd.exe command.com ksh 44bsd-csh jsh powershell.exe pwsh fish ))
     {
       subtest $shell => sub {
 
