@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Test against PowerShell on Unix (pwsh) when found
 
 0.31      2017-10-25 11:10:03 -0400
   - Production release identical to 0.30_01
